Archive2/8e/8f128077ae9297/output
main.cpp: In function 'int main()':
main.cpp:312:29: error: 'BusTupe' was not declared in this scope
     pair<string, unique_ptr<BusTupe>> pairbbb = make_pair("0", bbb);
                             ^
main.cpp:312:29: error: template argument 1 is invalid
main.cpp:312:29: error: template argument 2 is invalid
main.cpp:312:36: error: template argument 2 is invalid
     pair<string, unique_ptr<BusTupe>> pairbbb = make_pair("0", bbb);
                                    ^
main.cpp:312:47: error: invalid type in declaration before '=' token
     pair<string, unique_ptr<BusTupe>> pairbbb = make_pair("0", bbb);
                                               ^
In file included from /usr/local/include/c++/4.9.2/bits/stl_algobase.h:64:0,
                 from /usr/local/include/c++/4.9.2/bits/char_traits.h:39,
                 from /usr/local/include/c++/4.9.2/ios:40,
                 from /usr/local/include/c++/4.9.2/ostream:38,
                 from /usr/local/include/c++/4.9.2/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/bits/stl_pair.h: In instantiation of 'constexpr std::pair<_T1, _T2>::pair(const _T1&, const _T2&) [with _T1 = const char*; _T2 = std::unique_ptr<BusTypeBasic>]':
/usr/local/include/c++/4.9.2/bits/stl_pair.h:281:72:   required from 'constexpr std::pair<typename std::__decay_and_strip<_Tp>::__type, typename std::__decay_and_strip<_T2>::__type> std::make_pair(_T1&&, _T2&&) [with _T1 = const char (&)[2]; _T2 = std::unique_ptr<BusTypeBasic>&; typename std::__decay_and_strip<_T2>::__type = std::unique_ptr<BusTypeBasic>; typename std::__decay_and_strip<_Tp>::__type = const char*]'
main.cpp:312:67:   required from here
/usr/local/include/c++/4.9.2/bits/stl_pair.h:113:31: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = BusTypeBasic; _Dp = std::default_delete<BusTypeBasic>]'
       : first(__a), second(__b) { }
                               ^
In file included from /usr/local/include/c++/4.9.2/memory:81:0,
                 from main.cpp:6:
/usr/local/include/c++/4.9.2/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
main.cpp:312:67: error: cannot convert 'std::pair<const char*, std::unique_ptr<BusTypeBasic> >' to 'int' in initialization
     pair<string, unique_ptr<BusTupe>> pairbbb = make_pair("0", bbb);
                                                                   ^
main.cpp:313:37: error: no matching function for call to 'OrderedMap<std::basic_string<char>, std::unique_ptr<BusType> >::insert(int&)'
     s->members.tuples.insert(pairbbb);
                                     ^
main.cpp:313:37: note: candidates are:
main.cpp:27:31: note: std::pair<typename std::vector<std::pair<_T1, _T2> >::iterator, bool> OrderedMap<Key, T>::insert(OrderedMap<Key, T>::Pair_t&) [with Key = std::basic_string<char>; T = std::unique_ptr<BusType>; typename std::vector<std::pair<_T1, _T2> >::iterator = __gnu_cxx::__normal_iterator<std::pair<std::basic_string<char>, std::unique_ptr<BusType> >*, std::vector<std::pair<std::basic_string<char>, std::unique_ptr<BusType> >, std::allocator<std::pair<std::basic_string<char>, std::unique_ptr<BusType> > > > >; OrderedMap<Key, T>::Pair_t = std::pair<std::basic_string<char>, std::unique_ptr<BusType> >]
   std::pair<Iterator_t, bool> insert(Pair_t & data)
                               ^
main.cpp:27:31: note:   no known conversion for argument 1 from 'int' to 'OrderedMap<std::basic_string<char>, std::unique_ptr<BusType> >::Pair_t& {aka std::pair<std::basic_string<char>, std::unique_ptr<BusType> >&}'
main.cpp:33:33: note: std::pair<typename std::vector<std::pair<_T1, _T2> >::iterator, bool> OrderedMap<Key, T>::insert(OrderedMap<Key, T>::Pair_t&&) [with Key = std::basic_string<char>; T = std::unique_ptr<BusType>; typename std::vector<std::pair<_T1, _T2> >::iterator = __gnu_cxx::__normal_iterator<std::pair<std::basic_string<char>, std::unique_ptr<BusType> >*, std::vector<std::pair<std::basic_string<char>, std::unique_ptr<BusType> >, std::allocator<std::pair<std::basic_string<char>, std::unique_ptr<BusType> > > > >; OrderedMap<Key, T>::Pair_t = std::pair<std::basic_string<char>, std::unique_ptr<BusType> >]
     std::pair<Iterator_t, bool> insert(Pair_t && data)
                                 ^
main.cpp:33:33: note:   no known conversion for argument 1 from 'int' to 'OrderedMap<std::basic_string<char>, std::unique_ptr<BusType> >::Pair_t&& {aka std::pair<std::basic_string<char>, std::unique_ptr<BusType> >&&}'
